Swap card heading position

--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
             </div>
           </div>
           <div class="article">
+            <div class="cards-heading"><p>Your Projects</p>
             <div class="cards">
-                <p>Your Projects</p>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas maiores consequuntur magni, nulla earum dolorem?</p>
+                </div>
+                <div class="card">
+                  <p class="title">Article Title</p>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              </div>
+                <div class="card">
+                    <p class="title">Article Title</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-                </div>
-                <div class="card">
-                    <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-                </div>
-                <div class="card">
-                    <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             
