--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             <div class="cards">
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas maiores consequuntur magni, nulla earum dolorem?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum maxime commodi placeat repellendus asperiores quam debitis laboriosam quas cum totam.</p>
                 </div>
                 <div class="card">
                   <p class="title">Article Title</p>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nobis quisquam ipsam quod. Dignissimos modi ad alias beatae iure impedit in quod mollitia sit.
               </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi animi repellendus nam culpa officiis minus laboriosam quis cupiditate delectus. Delectus eaque harum voluptatum!</p>
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, quo? Doloribus, recusandae sequi! Sunt impedit eius nihil illo, unde quo aliquam accusantium corrupti ab!
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus et iusto quia. Aut, suscipit amet aperiam quaerat excepturi ullam perspiciatis veritatis accusantium corporis deserunt.
                 </div>
                 <div class="card">
                     <p class="title">Article Title</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ratione id, nobis dolores odit alias facilis voluptatibus soluta aliquam quibusdam nulla illum ex.
                 </div>
             </div>
             
