Add news div child

--- a/index.html
+++ b/index.html
@@ -50,7 +50,30 @@
                     <p class="title">Article Title</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ratione id, nobis dolores odit alias facilis voluptatibus soluta aliquam quibusdam nulla illum ex.
                 </div>
+            </div></div>
+
+            <div class="news"><p>Announcements</p>
+            <div class="rightbar">
+              <div class="news-list">
+                <ul>
+                  <li>
+                    <strong>Site Maintenance</strong>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, odit?</p>
+                  </li>
+                  <hr>
+                  <li>
+                    <strong>Community Share Day</strong>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo adipisci iste deserunt repellat quasi maxime!</p>
+                  </li>
+                  <hr>
+                  <li>
+                    <strong>Updated Privacy Policy</strong>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit porro ex vero autem odio sequi?</p>
+                  </li>
+                </ul>
             </div>
+            </div>
+           
             
           </div>
         </div>
