--- a/index.html
+++ b/index.html
@@ -149,20 +149,32 @@
                 <div class="trending">
                   <ul>
                     <li>
-                      <strong>@teagan</strong>
-                      <p>Mysterious Calculator</p>
+                      <img src="./imgs/teagan.png" alt="flat art of woman">
+                      <div class="creator">
+                        <strong>@teagan</strong>
+                        <p>Mysterious Calculator</p>
+                      </div>
                     </li>
                     <li>
-                      <strong>@johnelton</strong>
-                      <p>Yellow Brick Project</p>
+                      <img src="./imgs/ejohn.png" alt="quasi-picasso-like flat art of man">
+                      <div class="creator">
+                        <strong>@johnelton</strong>
+                        <p>Yellow Brick Project</p>
+                      </div>
                     </li>
                     <li>
-                      <strong>@esmith</strong>
-                      <p>Britain Babies App</p>
+                      <img src="./imgs/elliott.png" alt="flat art of man in glasses holding an umbrella">
+                      <div class="creator">
+                        <strong>@esmith</strong>
+                        <p>Britain Babies App</p>
+                      </div>
                     </li>
                     <li>
-                      <strong>@manicpreacher</strong>
-                      <p>Tracker for the P.C.</p>
+                      <img src="./imgs/msp.png" alt="flat art of punk girl">
+                      <div class="creator">
+                        <strong>@manicpreacher</strong>
+                        <p>Tracker for the P.C.</p>
+                      </div>
                     </li>
                   </ul>
                 </div>
