Implement hello user div and its elements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <img src="./imgs/msp.png" alt="flat art of punk girl">
             <strong>Jean Bradfield</strong>
             <div class="search"></div>
+            <img id="welcome-pic" src="./imgs/msp.png" alt="flat art of punk girl">
+            <div class="hello-ms">
+              <strong>Hi there,</strong>
+              <p>Jean Bradfield (@manicpreacher)</p>
+            </div>
+            <div class="balloon"><p>News</p></div>
+            <div class="balloon"><p>Upload</p></div>
+            <div class="balloon"><p>Save</p></div>
           </div>
           <div class="sidebar">
             <div class="options">
